--- a/css/agency.css
+++ b/css/agency.css
@@ -538,6 +538,7 @@ section h3.section-subheading {
   text-align: center;
   margin-bottom: 50px;
 }
+
 .team-member img {
   margin: 0 auto;
   border: 7px solid white;
@@ -550,8 +551,8 @@ section h3.section-subheading {
 .team-member p {
   margin-top: 0;
 }
-aside.clients img {
-  margin: 50px auto;
+aside.clients i {
+  font-size: 100px;
 }
 section#contact {
   background-color: #222222;
@@ -642,6 +643,7 @@ ul.social-buttons li a {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
+
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
